fixed squished content issue with content class flex box on non-index pages

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -42,7 +42,7 @@
     flex-wrap: wrap;
 }
 
-.content {
+.dash {
     display: flex;
     flex-direction: column;
     justify-content: center;
